--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
         {
             "source": "/api/(.*)",
             "destination": "/api/index.js"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ],
     "buildCommand": "cd frontend && npm install && npm run build",
